--- a/research-objectives/values.tex
+++ b/research-objectives/values.tex
@@ -19,16 +19,16 @@
 \newcommand{\FIITtitleSK}[0] {Vylepšenie dôkazov s nulovým vedomím v blockchainoch}
 \newcommand{\FIITauthor}[0] {Lukáš Častven}
 \newcommand{\FIITsupervisor}[0] {Ing. Kristián Košťál PhD.}
-% \newcommand{\FIITevidenceNumber}[0] {FIIT-16768-116160}
+\newcommand{\FIITevidenceNumber}[0] {}
 \newcommand{\FIITdate}[0] {November 2024}
 \newcommand{\FIITdateSK}[0] {November 2024}
 \newcommand{\FIITstudyProgram}[0] {Intelligent software systems}
 \newcommand{\FIITstudyProgramSK}[0] {Inteligentné softvérové systémy}
 \newcommand{\FIITstudyField}[0] {Computer Science}
-% \newcommand{\FIITdegreeCourseSK}[0] {9.2.1 Informatika}
+\newcommand{\FIITdegreeCourseSK}[0] {9.2.1 Informatika}
 \newcommand{\FIITinstitute}[0] {Institute of Computer Engineering and Applied Informatics}
 \newcommand{\FIITinstituteSK}[0] {Ústav počítačového inžinierstva a aplikovanej informatiky}
 \newcommand{\FIITsignPlace}[0] {In Bratislava, }
 \newcommand{\FIITsignPlaceSK}[0] {V Bratislave, }
 \newcommand{\FIITsignDate}[0] {22.11.2024}
-% \newcommand{\FIITArchiveName}[0] {BP\_LukasCastven.zip}
+\newcommand{\FIITArchiveName}[0] {DP\_LukasCastven.zip}
