--- a/research-objectives/main.tex
+++ b/research-objectives/main.tex
@@ -63,10 +63,11 @@
 \begin{refsegment}
     \include{content/introduction}
 
-    % \include{content/goals}
+	\include{content/motivation}
 
     \include{content/analysis}
 
+	%
     % \include{content/related}
     %
     % \include{content/design}
