--- a/research-objectives/content/motivation.tex
+++ b/research-objectives/content/motivation.tex
@@ -3,20 +3,20 @@
 Despite their powerful capabilities, modern ZKP systems often face significant
 practical challenges. Proving systems today typically require high performance
 computing resources, sometimes even customized ASICs, to achieve reasonable
-proving times. This reliance on non consumer grage hardware not only raises
+proving times. This reliance on non-consumer-grage hardware not only raises
 the cost barrier for participation but also undermines the decentralization
 ethos central to many cryptographic applications.
 
 The motivation behind this work is to explore avenues for enhancing ZKPs by
 reducing their hardware requirements. By slightly decreasing the computational
-demands of proof generation, this work aims to make ZKPs more accessible to
+demands of proof generation, this work aims to enhance ZKPs and make them accessible to
 individuals using common hardware, akin to how Ethereum staking allows
 validators to participate without specialized equipment. Lowering the entry
 barrier will support greater decentralization, enabling a wider community to
 engage in proof generation and verification processes.
 
 In pursuit of this goal, the potential of utilizing smaller prime fields and
-binary fields in ZKP systems is investigate. By optimizing the underlying
+binary fields in ZKP systems is investigated. By optimizing the underlying
 mathematical structures, we hope to enhance efficiency and data density,
 thereby reducing the need for specialized hardware. This approach could lead
 the way for more scalable and decentralized cryptographic solutions,
