--- a/research-objectives/values.tex
+++ b/research-objectives/values.tex
@@ -15,7 +15,7 @@
 \newcommand{\FIITfacultySK}[0] {Fakulta informatiky a informačných technológií}
 \newcommand{\FIITthesis}[0] {Masters's thesis}
 \newcommand{\FIITthesisSK}[0] {Diplomová práca}
-\newcommand{\FIITtitle}[0] {Enhancing Zero-knowledge proofs in blockchains}
+\newcommand{\FIITtitle}[0] {Enhancing Zero Knowledge proofs in blockchains}
 \newcommand{\FIITtitleSK}[0] {Vylepšenie dôkazov s nulovým vedomím v blockchainoch}
 \newcommand{\FIITauthor}[0] {Lukáš Častven}
 \newcommand{\FIITsupervisor}[0] {Ing. Kristián Košťál PhD.}
