values and abbreviations

--- a/dp1/doc/values.tex
+++ b/dp1/doc/values.tex
@@ -1,3 +1,4 @@
+% TODO replace TODOs with values
 % Layout settings
 \newcommand{\FIITdefaultFontSize}[0] {12pt}
 \setcounter{secnumdepth}{3}
@@ -13,22 +14,22 @@
 \newcommand{\FIITuniversitySK}[0] {Slovenská technická univerzita v Bratislave}
 \newcommand{\FIITfaculty}[0] {Faculty of informatics and information technologies}
 \newcommand{\FIITfacultySK}[0] {Fakulta informatiky a informačných technológií}
-\newcommand{\FIITthesis}[0] {Bachelor's thesis}
-\newcommand{\FIITthesisSK}[0] {Bakalárska práca}
-\newcommand{\FIITtitle}[0] {Practical usage of Zero-knowledge in different use-cases in blockchains}
-\newcommand{\FIITtitleSK}[0] {Praktické využitie dôkazov s nulovým vedomím v rôznych prípadoch použitia v blockchainoch}
+\newcommand{\FIITthesis}[0] {Engineer's Thesis}
+\newcommand{\FIITthesisSK}[0] {Inžinierska práca}
+\newcommand{\FIITtitle}[0] {Designing Zero-Knowledge Proof Solutions in Ethereum ecosystem}
+\newcommand{\FIITtitleSK}[0] {Návrh riešení využívajúcich dôkazy s nulovým vedomím v Ethereum ekosystéme}
 \newcommand{\FIITauthor}[0] {Lukáš Častven}
 \newcommand{\FIITsupervisor}[0] {Ing. Kristián Košťál PhD.}
-\newcommand{\FIITevidenceNumber}[0] {FIIT-16768-116160}
-\newcommand{\FIITdate}[0] {May 2024}
-\newcommand{\FIITdateSK}[0] {Máj 2024}
-\newcommand{\FIITstudyProgram}[0] {Informatics}
-\newcommand{\FIITstudyProgramSK}[0] {Informatika}
+\newcommand{\FIITevidenceNumber}[0] {TODO}
+\newcommand{\FIITdate}[0] {May 2025}
+\newcommand{\FIITdateSK}[0] {Máj 2025}
+\newcommand{\FIITstudyProgram}[0] {Intelligent software systems}
+\newcommand{\FIITstudyProgramSK}[0] {Inteligentné softvérové systémy}
 \newcommand{\FIITstudyField}[0] {Computer Science}
-\newcommand{\FIITdegreeCourseSK}[0] {9.2.1 Informatika}
+\newcommand{\FIITdegreeCourseSK}[0] {TODO}
 \newcommand{\FIITinstitute}[0] {Institute of Computer Engineering and Applied Informatics}
 \newcommand{\FIITinstituteSK}[0] {Ústav počítačového inžinierstva a aplikovanej informatiky}
 \newcommand{\FIITsignPlace}[0] {In Bratislava, }
 \newcommand{\FIITsignPlaceSK}[0] {V Bratislave, }
-\newcommand{\FIITsignDate}[0] {20.5.2024}
-\newcommand{\FIITArchiveName}[0] {BP\_LukasCastven.zip}
+\newcommand{\FIITsignDate}[0] {31.5.2025}
+\newcommand{\FIITArchiveName}[0] {TODO}
