--- a/dp1/doc/pages/abbreviations.tex
+++ b/dp1/doc/pages/abbreviations.tex
@@ -12,6 +12,8 @@
 \begin{tabular}{ >{\bfseries}m{2cm} m{10cm} }
 	ERC & Ethereum Request for Comments \\
 	EVM & Ethereum Virtual Machine 	\\
+	PoS & Proof of stake \\
+	p2p & peer-to-peer \\
 	SNARK & Succinct Non-interactive Argument of Knowledge \\
 	R1CS & Rank-1 Constraint System \\
 	ZK  & Zero Knowledge           	\\
