analysis on snarkification

--- a/dp1/doc/bibliography.bib
+++ b/dp1/doc/bibliography.bib
@@ -39,3 +39,11 @@
 	year = {},
 	note = {[Accessed 29-05-2025]},
 }
+
+@misc{justinDrakeBeamchain,
+	author = {},
+	title = { - {Y}ou{T}ube --- youtube.com},
+	howpublished = {\url{https://www.youtube.com/watch?v=lRqnFrqpq4k}},
+	year = {},
+	note = {[Accessed 31-05-2025]},
+}
