--- a/dp1/doc/content/analysis/ethereum.tex
+++ b/dp1/doc/content/analysis/ethereum.tex
@@ -47,6 +47,8 @@ outputs next valid state:
 F(S_n, T) = S_{n+1}
 \]
 
-Thus, Ethereum's state transition function is described by the EVM. \cite{ethereumEthereumVirtual}
+Thus, Ethereum's state transition function is described by the EVM. This function
+must be executed by each execution node for each new block in order to keep up
+with the current chain state. \cite{ethereumEthereumVirtual}
 
 
