--- a/dp1/doc/main.tex
+++ b/dp1/doc/main.tex
@@ -64,12 +64,15 @@
 \begin{refsegment}
 
 % the analysis structure:
+	% TODO turn these chapters into sections with an analysis chapter as parent
 %	1. ethereum
 %		a. consensus
 %		b. execution layer
-%	2. beam chain snarkification
+%	2. snarkification
 %		a. ZKPs
 %		b. snarkification benefits, why and how
+%		c. beam chain - snarkification of consensus
+%		d. enshrined zkEVM - snarkification of execution
 % 	3. execution layer snarkification => zkEVM, what it is
 %		a. RISC-V zkVMs with EVMs binaries compiled to RISC-V
 %		b. nowadays -> recursion and folding
@@ -81,6 +84,7 @@
 %		based ZK systems viable to prove ETH blocks? And on what hardware?
 
     \include{content/analysis/ethereum}
+    \include{content/analysis/snarkification}
 
     % \include{content/introduction}
     %
