--- a/dp1/doc/content/analysis/snarkification.tex
+++ b/dp1/doc/content/analysis/snarkification.tex
@@ -3,10 +3,10 @@
 %		b. snarkification benefits, why and how
 %		c. beam chain - snarkification of consensus
 %		d. enshrined zkEVM - snarkification of execution
-\chapter{Snarkification of Ethereum}\label{chapter:snarkification}
+\section{Snarkification of Ethereum}\label{sec:snarkification}
 
-As discussed in sections about consensus (\ref{sec:ethereum_consensus}) and
-execution layer (\ref{sec:ethereum_execution}), nodes on each layer must spend
+As discussed in sections about consensus (\ref{subsec:ethereum_consensus}) and
+execution layer (\ref{subsec:ethereum_execution}), nodes on each layer must spend
 compute resources to validate the consensus data of new blocks or re-execute all
 transactions within them to maintain the blockchain's state.
 These computations limit the scalability of the whole network.
